--- a/index.html
+++ b/index.html
@@ -3,9 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Excel</title>
 </head>
 <body>
+    <div class="page-actions-container">
+        <div class="page-action">File</div>
+        <div class="page-action">Home</div>
+        <div class="page-action">Insert</div>
+        <div class="page-action">Layout</div>
+        <div class="page-action">Help</div>
+    </div>
+    <div class="cellprop-action-container">
+        <span class="material-symbols-outlined">
+            content_copy
+        </span>
+        <span class="material-symbols-outlined">
+            content_cut
+        </span>
+        <span class="material-symbols-outlined">
+            content_paste
+        </span>
+        <select class="font-family-prop">
+            <option value="monospace">Monospace</option>
+            <option value="sans-serif">Sans-serif</option>
+            <option value="fantasy">Fantasy</option>
+            <option value="cursive">Cursive</option>
+        </select>
+        <select class="font-size-prop">
+            <option value="14">14</option>
+            <option value="16">16</option>
+            <option value="18">18</option>
+            <option value="20">20</option>
+        </select>
+        <span class="material-symbols-outlined">
+            format_bold
+        </span>
+        <span class="material-symbols-outlined">
+            format_italic
+        </span>
+        <span class="material-symbols-outlined">
+            format_underlined
+        </span>
+        <span class="material-symbols-outlined">
+            format_align_left
+        </span>
+        <span class="material-symbols-outlined">
+            format_align_center
+        </span>
+        <span class="material-symbols-outlined">
+            format_align_right
+        </span>
+    </div>
+    <div class="formula-actions-container">
+        <input type="text" readonly class="address-bar">
+        
+        <span id="formula-icon" class="material-symbols-outlined">
+            function
+        </span>
+        <input type="text" class="formula-bar">
+    </div>
+    <div class="grid-container"></div>
+    <div class="sheet-action-container">
+        <div class="sheet_add_icon">
+            <span class="material-symbols-outlined">
+                post_add
+            </span>
+        </div>
+        <div class="sheets-folder-container">
+            <div class="sheet-folder">Sheet1</div>
+        </div>
+    </div>
     
+
+
+
+    <script src="script.js"></script>
 </body>
 </html>
